# dmsky

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  jcalc.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
dmsky/: __init__.py  _version.py  density.py  factory.py  get_version.py  jcalc.py  library.py  plotting.py  priors.py  roster.py  skymap.py  target.py  targets.py
dmsky/data/rosters/: roster.yaml
dmsky/data/targets/: defaults.yaml
dmsky/data/targets/clusters/: default.yaml
dmsky/data/targets/dwarfs/: ackermann2014.yaml  ackermann2016.yaml  ackermann2016_photoj_0.6.yaml  albert2017.yaml  assorted.yaml  census2020.yaml  defaults.yaml  defaults2020.yaml  defaults2022.yaml  defaults2023.yaml  draco.yaml  geringer-sameth2015.yaml  koposov2018.yaml  martinez2015.yaml  pace2018.yaml  pace2018v1.yaml  pace2019.yaml  simon2015.yaml
dmsky/data/targets/galactic/: ackermann2012.yaml  ackermann2013.yaml  center.yaml  defaults.yaml
dmsky/data/targets/galaxies/: defaults.yaml
dmsky/file_io/: __init__.py  table.py
dmsky/utils/: coords.py  healpix.py  speed.py  stat_funcs.py  tools.py  units.py  wcs.py
docs/: Makefile  conf.py  dmsky.rst  dmsky_file_io.rst  dmsky_utils.rst  index.rst  install.rst  quickstart.rst
examples/: roster_example.ipynb  target_example.ipynb  wcs_template_example.ipynb
tests/: test_density.py  test_jcalc.py  test_roster.py  test_skymap.py  test_targets.py
